--- a/app/src/main/res/layout/fragment_current_lecture.xml
+++ b/app/src/main/res/layout/fragment_current_lecture.xml
@@ -6,11 +6,11 @@
     tools:context="com.rinc.bong.rivatorproject.fragments.CurrentLectureFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="Current Lecture Fragment" />
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/lectureRecyclerView"
+        android:scrollbars="vertical"
+        />
 
 </RelativeLayout>
