--- a/app/src/main/res/layout/subject_card_view.xml
+++ b/app/src/main/res/layout/subject_card_view.xml
@@ -5,50 +5,66 @@
     android:layout_height="248dp">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="16dp">
-
-        <ImageView
-            android:id="@+id/image"
+        android:layout_height="match_parent">
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:background="#ffc2c2"
-            android:layout_height="144dp" />
+            android:layout_height="match_parent"
+            android:id="@+id/box"
+            android:layout_margin="16dp">
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:background="#ffc2c2"
+                android:layout_height="144dp" />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="8dp"
+                android:layout_below="@+id/image"
+                android:textSize="24sp"
+                android:letterSpacing="-0.09"
+                android:text="웹프로그래밍 기초"
+                android:textColor="@color/colorDarkText"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="김철수"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="8dp"
+                android:id="@+id/teacherName"
+                android:layout_below="@+id/title"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/teacherName"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="8dp"
+                android:text="・"
+                android:id="@+id/middleText"
+                android:layout_below="@+id/title"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="128시간"
+                android:id="@+id/unit"
+                android:layout_toRightOf="@+id/middleText"
+                android:layout_below="@+id/title"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="8dp"/>
+
+        </RelativeLayout>
 
         <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginLeft="8dp"
-            android:layout_below="@+id/image"
-            android:textSize="24sp"
-            android:letterSpacing="-0.09"
-            android:text="웹프로그래밍 기초"
-            android:textColor="@color/colorDarkText"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="김철수"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="8dp"
-            android:id="@+id/teacherName"
-            android:layout_below="@+id/title"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/teacherName"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="8dp"
-            android:text="・"
-            android:id="@+id/middleText"
-            android:layout_below="@+id/title"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="128시간"
-            android:layout_toRightOf="@+id/middleText"
-            android:layout_below="@+id/title"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="8dp"/>
+            android:id="@+id/textView8"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@+id/box"
+            android:background="#cfcfcf" />
     </RelativeLayout>
+
+
 </android.support.v7.widget.CardView>
