Custom Indicator 적용 전 //오류 시 되돌리기 위한 커밋

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="colorBackBtn">#dfdfdf</color>
     <color name="colorNextBtn">#14e4a2</color>
     <color name="colorLine">#cecece</color>
+    <color name="colorImageSlider">#91edd0</color>
 
     <!--text color-->
     <color name="colorWhiteText">#ffffff</color>
@@ -19,4 +20,6 @@
 
     <!--Custom Action Bar -->
     <color name="greenBar">#14e4a2</color>
+
+
 </resources>
