--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="#FFFFFF">
+            <android.support.v4.view.ViewPager
+                android:id="@+id/home_image_slider"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:background="@color/colorImageSlider" />
+
             <LinearLayout
+                android:layout_below="@+id/home_image_slider"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/textLayout"
