Custom Indicator 적용 완료

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!--Indicator Size-->
+    <dimen name="home_indicator_select">16dp</dimen>
+    <dimen name="home_indicator_default">8dp</dimen>
 </resources>
