--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#f0f0f0"
     tools:context="com.rinc.bong.rivatorproject.fragments.HomeFragment">
 
@@ -9,160 +10,194 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/block1"
-            android:layout_marginTop="16dp"
-            android:background="#FFFFFF">
-            <LinearLayout
+
+            <FrameLayout
+                android:id="@+id/framelayout_viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="200dp">
+
+                <RelativeLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    >
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/home_image_slider"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:background="@color/colorImageSlider" />
+
+                    <me.relex.circleindicator.CircleIndicator
+                        android:id="@+id/home_is_indicator"
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:layout_alignParentBottom="true"
+                        app:ci_drawable="@drawable/indicator_select"
+                        app:ci_drawable_unselected="@drawable/indicator_default"
+                       />
+
+                </RelativeLayout>
+
+
+            </FrameLayout>
+
+
+            <RelativeLayout
+                android:id="@+id/block1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textLayout1"
-                android:layout_marginRight="16dp"
-                android:orientation="horizontal">
+                android:layout_below="@+id/framelayout_viewpager"
+                android:layout_marginTop="16dp"
+                android:background="#FFFFFF">
 
-                <TextView
-                    android:id="@+id/basicText"
+                <LinearLayout
+                    android:id="@+id/textLayout1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/colorDarkText"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="24dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_weight="1"
-                    android:letterSpacing="-0.06"
-                    android:text="강사리스트"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/greenBar"
-                    android:layout_marginBottom="21dp"
                     android:layout_marginRight="16dp"
-                    android:layout_marginTop="16dp"
-                    android:id="@+id/moreText1"
-                    android:textSize="12sp"
-                    android:letterSpacing="-0.1" />
+                    android:orientation="horizontal">
 
-            </LinearLayout>
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:layout_below="@+id/textLayout1"
-                android:scrollbars="horizontal"
-                android:padding="8dp"
-                android:id="@+id/recycler1">
-            </android.support.v7.widget.RecyclerView>
-        </RelativeLayout>
+                    <TextView
+                        android:id="@+id/basicText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_weight="1"
+                        android:letterSpacing="-0.06"
+                        android:text="강사리스트"
+                        android:textColor="@color/colorDarkText"
+                        android:textSize="16sp" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/block2"
-            android:layout_below="@+id/block1"
-            android:layout_marginTop="16dp"
-            android:background="#FFFFFF">
-            <android.support.v4.view.ViewPager
-                android:id="@+id/home_image_slider"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:background="@color/colorImageSlider" />
+                    <TextView
+                        android:id="@+id/moreText1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="21dp"
+                        android:layout_marginRight="16dp"
+                        android:layout_marginTop="16dp"
+                        android:letterSpacing="-0.1"
+                        android:textColor="@color/greenBar"
+                        android:textSize="12sp" />
 
-            <LinearLayout
-                android:layout_below="@+id/home_image_slider"
+                </LinearLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler1"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:layout_below="@+id/textLayout1"
+                    android:padding="8dp"
+                    android:scrollbars="horizontal"></android.support.v7.widget.RecyclerView>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/block2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textLayout2"
-                android:layout_marginRight="16dp"
-                android:orientation="horizontal">
+                android:layout_below="@+id/block1"
+                android:layout_marginTop="16dp"
+                android:background="#FFFFFF">
 
-                <TextView
-                    android:id="@+id/teacherListText"
+
+                <LinearLayout
+                    android:id="@+id/textLayout2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/colorDarkText"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="24dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_weight="1"
-                    android:letterSpacing="-0.06"
-                    android:text="강사리스트"
-                    android:textSize="16sp" />
+                    android:layout_marginRight="16dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/teacherListText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_weight="1"
+                        android:letterSpacing="-0.06"
+                        android:text="강사리스트"
+                        android:textColor="@color/colorDarkText"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/moreText2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="21dp"
+                        android:layout_marginRight="16dp"
+                        android:layout_marginTop="16dp"
+                        android:letterSpacing="-0.1"
+                        android:textColor="@color/greenBar"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/greenBar"
-                    android:layout_marginBottom="21dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginTop="16dp"
-                    android:id="@+id/moreText2"
-                    android:textSize="12sp"
-                    android:letterSpacing="-0.1" />
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/textLayout2"
+                    android:background="?android:attr/listDivider" />
 
-            </LinearLayout>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_below="@+id/textLayout2"
-                android:background="?android:attr/listDivider"/>
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="392dp"
-                android:layout_below="@+id/textLayout2"
-                android:id="@+id/teacherList"/>
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/block3"
-            android:layout_below="@+id/block2"
-            android:layout_marginTop="16dp"
-            android:background="#FFFFFF">
-            <LinearLayout
+                <ListView
+                    android:id="@+id/teacherList"
+                    android:layout_width="match_parent"
+                    android:layout_height="392dp"
+                    android:layout_below="@+id/textLayout2" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/block3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textLayout3"
-                android:layout_marginRight="16dp"
-                android:orientation="horizontal">
+                android:layout_below="@+id/block2"
+                android:layout_marginTop="16dp"
+                android:background="#FFFFFF">
 
-                <TextView
-                    android:id="@+id/basicText3"
+                <LinearLayout
+                    android:id="@+id/textLayout3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/colorDarkText"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="24dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_weight="1"
-                    android:letterSpacing="-0.06"
-                    android:text="강사리스트"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/greenBar"
-                    android:layout_marginBottom="21dp"
                     android:layout_marginRight="16dp"
-                    android:layout_marginTop="16dp"
-                    android:id="@+id/moreText3"
-                    android:textSize="12sp"
-                    android:letterSpacing="-0.1" />
+                    android:orientation="horizontal">
 
-            </LinearLayout>
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:layout_below="@+id/textLayout3"
-                android:scrollbars="horizontal"
-                android:id="@+id/recycler2">
-            </android.support.v7.widget.RecyclerView>
+                    <TextView
+                        android:id="@+id/basicText3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_weight="1"
+                        android:letterSpacing="-0.06"
+                        android:text="강사리스트"
+                        android:textColor="@color/colorDarkText"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/moreText3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="21dp"
+                        android:layout_marginRight="16dp"
+                        android:layout_marginTop="16dp"
+                        android:letterSpacing="-0.1"
+                        android:textColor="@color/greenBar"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler2"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:layout_below="@+id/textLayout3"
+                    android:scrollbars="horizontal"></android.support.v7.widget.RecyclerView>
             </RelativeLayout>
         </RelativeLayout>
     </ScrollView>
