--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,9 +8,10 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/tab"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100px"
         android:background="@color/colorWhiteText"
-        app:tabGravity="fill"
+        app:tabGravity="center"
+        app:tabMode="scrollable"
         app:tabIndicatorColor="@color/greenBar"
         app:tabSelectedTextColor="@color/greenBar"
         app:tabTextColor="#787878" >
