--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,6 +18,7 @@
     </android.support.design.widget.TabLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
+        android:layout_marginTop="100px"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center">
