--- a/app/src/main/res/layout/activity_signup_portfolio.xml
+++ b/app/src/main/res/layout/activity_signup_portfolio.xml
@@ -92,7 +92,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="finishSignUp"
-            android:background="@color/colorNextBtn"
+            android:background="@color/colorMainGreen"
             android:text="회원가입 완료"
             android:textColor="@color/colorWhiteText" />
     </LinearLayout>
