--- a/app/src/main/res/layout/fragment_notice_read.xml
+++ b/app/src/main/res/layout/fragment_notice_read.xml
@@ -2,5 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/notice_recycler_read"
+        android:background="@color/colorBackground"/>
 </LinearLayout>
