--- a/app/src/main/res/layout/custom_action_bar.xml
+++ b/app/src/main/res/layout/custom_action_bar.xml
@@ -4,12 +4,12 @@
     android:background="@color/greenBar"
     style="?android:attr/borderlessButtonStyle"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="56dp">
 
     <Button
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:textColor="@color/colorWhiteText"
         android:background="@color/greenBar"
         android:textAlignment="center"
@@ -26,9 +26,8 @@
         android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:layout_alignBaseline="@+id/btnBack"
-        android:layout_alignBottom="@+id/btnBack"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:foregroundGravity="center"/>
 
 </RelativeLayout>
 
