--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="colorBackground">#f0f0f0</color>
     <color name="colorTextDefault">#787878</color>
 
+    <!--List Item-->
+    <color name="colorItemLine">#cfcfcf</color>
     <!--text color-->
     <color name="colorWhiteText">#ffffff</color>
     <color name="colorDarkText">#232323</color>
