--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/tab"
         android:layout_width="match_parent"
-        android:layout_height="100px"
+        android:layout_height="40dp"
         android:background="@color/colorWhiteText"
         app:tabGravity="center"
         app:tabMode="scrollable"
@@ -18,7 +18,7 @@
     </android.support.design.widget.TabLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
-        android:layout_marginTop="100px"
+        android:layout_marginTop="40dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center">
