bean객체 수정 적용

--- a/app/src/main/res/color/calendar_item_state.xml
+++ b/app/src/main/res/color/calendar_item_state.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
+    <courseItem
         android:color="@color/colorWhiteText"
         android:state_checked="true" />
-    <item
+    <courseItem
         android:color="@color/colorWhiteText" />
 </selector>
