--- a/app/src/main/res/menu/main_menu_actionbar.xml
+++ b/app/src/main/res/menu/main_menu_actionbar.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
-    <item
+    <courseItem
         android:id="@+id/search"
         android:orderInCategory="1"
         app:showAsAction="always"
         android:icon="@drawable/search"/>
-    <item
+    <courseItem
         android:id="@+id/aboutUs"
         android:orderInCategory="2"
         android:showAsAction="never"
