--- a/app/src/main/res/drawable-xxhdpi/nav_item_color_state.xml
+++ b/app/src/main/res/drawable-xxhdpi/nav_item_color_state.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <courseItem
+    <item
         android:color="@color/greenBar"
         android:state_checked="true" />
-    <courseItem
+    <item
         android:color="#ababab" />
 </selector>
