--- a/app/src/main/res/drawable-xxhdpi/profile_button_style.xml
+++ b/app/src/main/res/drawable-xxhdpi/profile_button_style.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <courseItem>
+    <item>
         <shape android:shape="rectangle" >
             <solid android:color="@color/colorWhiteText" />
             <stroke android:width="1dp"
                 android:color="#cfcfcf" />
         </shape>
-    </courseItem>
+    </item>
 </selector>
