ContestManagement, LectureManagement ...... 끝 / 중복 fragment layout 통합 / listview 오류 픽스 / item layout 추가

--- a/app/src/main/res/layout/item_default.xml
+++ b/app/src/main/res/layout/item_default.xml
@@ -7,7 +7,7 @@
     android:background="@color/colorPrimary"
     >
     <TextView
-        android:id="@+id/item_notice_title"
+        android:id="@+id/item_title"
         android:layout_marginTop="@dimen/notice_item_top_margin"
         android:layout_marginLeft="@dimen/notice_item_left_margin"
         android:layout_width="match_parent"
@@ -20,8 +20,8 @@
         />
     <TextView
         android:layout_marginLeft="@dimen/notice_item_left_margin"
-        android:layout_below="@+id/item_notice_title"
-        android:id="@+id/item_notice_category"
+        android:layout_below="@+id/item_title"
+        android:id="@+id/item_category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
