--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,16 +52,20 @@
         android:background="@color/colorMainGreen"
         android:text="로그인"
         android:onClick="goToHome"
+        style="?android:attr/borderlessButtonStyle"
         android:textColor="@color/colorWhiteText"
         android:layout_marginLeft="19dp"
         android:layout_marginRight="19dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="37dp" />
+        android:layout_above="@+id/forgot"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="계정을 잃어버리셨나요"
+        android:id="@+id/forgot"
+        android:layout_marginTop="16dp"
+        android:textColor="@color/blueText"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="11dp" />
