커스텀 액션바 drawable 리소스 수정 / 학위 및 포트폴리오 액티비티 레이아웃 수정

--- a/app/src/main/res/layout/layout_actionbar_type_back.xml
+++ b/app/src/main/res/layout/layout_actionbar_type_back.xml
@@ -9,7 +9,7 @@
         android:id="@+id/btnBack"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/back"
+        android:src="@drawable/backblack"
         android:layout_centerVertical="true"
         style="?android:attr/borderlessButtonStyle" />
 
