--- a/app/src/main/res/layout/activity_signup_degree.xml
+++ b/app/src/main/res/layout/activity_signup_degree.xml
@@ -7,70 +7,40 @@
     xmlns:sl="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorWhiteText"
+        android:orientation="vertical"
         android:layout_weight="1">
 
         <ImageView
             android:id="@+id/img_degree"
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:background="@color/colorImageBackground"
-            android:layout_marginRight="8dp"
-            sl:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            sl:layout_constraintLeft_toLeftOf="parent"
-            sl:layout_constraintHorizontal_bias="0.0"
-            sl:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
-
-
-        <EditText
-            android:id="@+id/editText_degree_first"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:hint="분류"
-            android:layout_marginTop="8dp"
-            sl:layout_constraintTop_toBottomOf="@+id/editText_degree_second"
-            sl:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="8dp"
-            sl:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            sl:layout_constraintLeft_toLeftOf="parent"
-            sl:layout_constraintHorizontal_bias="0.0"
-            sl:layout_constraintVertical_bias="0.111"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
-
-
-
-
-        <EditText
-            android:id="@+id/editText_degree_second"
-            android:layout_width="0dp"
-            android:layout_height="56dp"
-            android:background="@null"
-            android:textSize="16sp"
-            android:gravity="top"
-            android:hint="캡션"
-
-            android:layout_marginRight="8dp"
-            sl:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            sl:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="8dp"
-            sl:layout_constraintTop_toBottomOf="@+id/img_degree"
-            sl:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            sl:layout_constraintHorizontal_bias="0.0"
-            sl:layout_constraintVertical_bias="0.057"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
-    </android.support.constraint.ConstraintLayout>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="@color/colorImageBackground" />
+            <EditText
+                android:id="@+id/editText_degree_first"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorWhiteText"
+                android:hint="분류"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:layout_weight="3"/>
+            <EditText
+                android:id="@+id/editText_degree_second"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorWhiteText"
+                android:textSize="16sp"
+                android:gravity="top"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:hint="캡션"
+                android:layout_weight="2"/>
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
