--- a/app/src/main/res/layout/custom_action_bar.xml
+++ b/app/src/main/res/layout/custom_action_bar.xml
@@ -6,14 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="56dp">
 
-    <Button
+    <ImageButton
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
-        android:layout_height="56dp"
-        android:textColor="@color/colorWhiteText"
+        android:layout_height="match_parent"
         android:background="@color/greenBar"
         android:textAlignment="center"
-        android:text="←"
+        android:src="@drawable/backwhite"
         android:textSize="14pt"
         style="?android:attr/borderlessButtonStyle"
         android:layout_alignParentStart="true" />
