--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/scrollView"
     android:fitsSystemWindows="true"
     android:background="@color/greenBar"
     tools:context="com.rinc.bong.rivatorproject.activitys.CalendarActivity">
