--- a/app/src/main/res/layout/activity_student_sign_up.xml
+++ b/app/src/main/res/layout/activity_student_sign_up.xml
@@ -37,7 +37,8 @@
                 android:ems="10"
                 android:background="@color/colorWhiteText"
                 android:inputType="textPersonName"
-                android:hint="  아이디" />
+                android:hint="아이디"
+                android:paddingLeft="10dp"/>
 
             <EditText
                 android:id="@+id/editPassword"
@@ -47,15 +48,17 @@
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/editId"
                 android:ems="10"
+                android:paddingLeft="10dp"
                 android:background="@color/colorWhiteText"
                 android:inputType="textPersonName"
-                android:hint="  비밀번호" />
+                android:hint="비밀번호" />
 
             <EditText
                 android:layout_width="312dp"
                 android:layout_height="48dp"
                 android:background="@color/colorWhiteText"
-                android:hint="  비밀번호 재확인"
+                android:hint="비밀번호 재확인"
+                android:paddingLeft="10dp"
                 android:layout_marginBottom="16dp"
                 android:layout_below="@+id/editPassword"
                 android:layout_centerHorizontal="true"
@@ -68,7 +71,8 @@
                 android:layout_below="@+id/editPassword2"
                 android:layout_centerHorizontal="true"
                 android:background="@color/colorWhiteText"
-                android:hint="  이름"
+                android:hint="이름"
+                android:paddingLeft="10dp"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:layout_marginBottom="2dp"
@@ -80,7 +84,8 @@
                 android:background="@color/colorWhiteText"
                 android:layout_below="@+id/editName"
                 android:layout_centerHorizontal="true"
-                android:hint="  전화번호"
+                android:hint="전화번호"
+                android:paddingLeft="10dp"
                 android:id="@+id/editPhoneNumber"
                 android:layout_marginBottom="2dp"
                 android:layout_marginStart="24dp"
@@ -92,7 +97,8 @@
                 android:background="#cfcfcf"
                 android:textAlignment="center"
                 android:layout_marginBottom="2dp"
-                android:text="\n지역"
+                android:text="지역"
+                android:gravity="center"
                 android:id="@+id/textView5"
                 android:layout_alignStart="@+id/editPassword" />
 
@@ -125,7 +131,8 @@
                 android:layout_width="72dp"
                 android:layout_height="48dp"
                 android:background="#cfcfcf"
-                android:text="\n관심과목"
+                android:text="관심과목"
+                android:gravity="center"
                 android:layout_alignStart="@+id/textView5"
                 android:textAlignment="center"
                 android:layout_below="@+id/textView5"
