--- a/app/src/main/res/layout/activity_contest.xml
+++ b/app/src/main/res/layout/activity_contest.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@color/colorMainGreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,6 +13,7 @@
         app:tabSelectedTextColor="@color/colorMainGreen"
         android:layout_weight="40"
         android:layout_width="match_parent"
+        android:layout_marginTop="78dp"
         android:layout_height="0dp"
         android:id="@+id/contest_tablayout"/>
     <android.support.v4.view.ViewPager
