--- a/app/src/main/res/layout/layout_actionbar_type_back.xml
+++ b/app/src/main/res/layout/layout_actionbar_type_back.xml
@@ -3,12 +3,15 @@
     android:gravity="center_vertical"
     style="?android:attr/borderlessButtonStyle"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:padding="0dp"
+    android:layout_height="56dp">
 
     <ImageButton
         android:id="@+id/btnBack"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_margin="0dp"
+        android:layout_height="56dp"
+        android:padding="0dp"
         android:src="@drawable/backblack"
         android:layout_centerVertical="true"
         style="?android:attr/borderlessButtonStyle" />
@@ -21,8 +24,7 @@
         android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:layout_alignBaseline="@+id/btnBack"
-        android:layout_alignBottom="@+id/btnBack"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
 </RelativeLayout>
