프로젝트, 알림, 숙제 액티비티 스타일 수정

--- a/app/src/main/res/layout/activity_homework.xml
+++ b/app/src/main/res/layout/activity_homework.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorMainGreen"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -11,6 +12,7 @@
         app:tabIndicatorColor="@color/colorMainGreen"
         app:tabSelectedTextColor="@color/colorMainGreen"
         android:layout_weight="40"
+        android:layout_marginTop="76dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/homework_tablayout"/>
