--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -3,19 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorBackground"
+    android:background="@color/colorMainGreen"
     android:orientation="vertical"
     android:weightSum="560">
 
 
     <android.support.design.widget.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:background="#ffffff"
         app:tabTextColor="@color/colorTextDefault"
         app:tabIndicatorColor="@color/colorMainGreen"
         app:tabSelectedTextColor="@color/colorMainGreen"
         android:layout_weight="40"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_marginTop="76dp"
         android:id="@+id/notice_tablayout"/>
     <android.support.v4.view.ViewPager
         android:layout_weight="520"
