--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorMainGreen"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,9 +11,9 @@
         app:tabTextColor="@color/colorTextDefault"
         app:tabIndicatorColor="@color/colorMainGreen"
         app:tabSelectedTextColor="@color/colorMainGreen"
-        android:layout_weight="40"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="76dp"
         android:id="@+id/project_tablayout"/>
     <android.support.v4.view.ViewPager
         android:layout_weight="520"
