--- a/app/src/main/res/layout/activity_teacher_sign_up.xml
+++ b/app/src/main/res/layout/activity_teacher_sign_up.xml
@@ -149,6 +149,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="21dp"
+                    android:layout_marginBottom="21dp"
                     android:text="약관동의"
                     android:layout_alignStart="@+id/textView6"
                     android:layout_below="@+id/textView6"/>
