--- a/app/src/main/res/layout/sign_up_spinner_item.xml
+++ b/app/src/main/res/layout/sign_up_spinner_item.xml
@@ -4,7 +4,6 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:text="테스트"
-    android:textSize="8pt"
-    android:paddingLeft="15dp"
+    android:textSize="16sp"
     android:textColor="@color/textColor"
     />
